update REFLACX and EyeGaze study, not all from the patient.

--- a/[Patient-Level] (1) Clinical_data_import_mini copy.ipynb
+++ b/[Patient-Level] (1) Clinical_data_import_mini copy.ipynb
@@ -891,94 +891,7 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>subject_id</th>\n",
-       "      <th>hadm_id</th>\n",
-       "      <th>stay_id</th>\n",
-       "      <th>intime</th>\n",
-       "      <th>outtime</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>10000115</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>38081480</td>\n",
-       "      <td>2154-12-10 02:04:00</td>\n",
-       "      <td>2154-12-10 02:16:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>10000115</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>30295111</td>\n",
-       "      <td>2154-12-17 16:37:00</td>\n",
-       "      <td>2154-12-17 17:38:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>10000473</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>33267868</td>\n",
-       "      <td>2138-03-15 20:07:00</td>\n",
-       "      <td>2138-03-15 20:26:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>10000764</td>\n",
-       "      <td>27897940.0</td>\n",
-       "      <td>35420907</td>\n",
-       "      <td>2132-10-14 19:31:00</td>\n",
-       "      <td>2132-10-14 23:32:59</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>10001038</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>34301067</td>\n",
-       "      <td>2149-08-07 08:51:00</td>\n",
-       "      <td>2149-08-07 08:55:00</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   subject_id     hadm_id   stay_id               intime              outtime\n",
-       "0    10000115         NaN  38081480  2154-12-10 02:04:00  2154-12-10 02:16:00\n",
-       "1    10000115         NaN  30295111  2154-12-17 16:37:00  2154-12-17 17:38:00\n",
-       "2    10000473         NaN  33267868  2138-03-15 20:07:00  2138-03-15 20:26:00\n",
-       "3    10000764  27897940.0  35420907  2132-10-14 19:31:00  2132-10-14 23:32:59\n",
-       "4    10001038         NaN  34301067  2149-08-07 08:51:00  2149-08-07 08:55:00"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# load the edstays for indentifying the stay_id since the CXR-image dataset is a subset of ED.\n",
     "ED_edstays_df = pd.read_csv(os.path.join(ED_FOLDER_PATH, \"edstays.csv\"))\n",
@@ -1005,13 +918,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0658a1a901b748bdacbf4636271c59ab",
+       "model_id": "e3ceac97236447ed8a6e6829a4393039",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1074,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1099,7 +1012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1109,7 +1022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1300,7 +1213,7 @@
        "2797         True       False   2.190020e+13  35307197   True     True  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1317,7 +1230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1508,7 +1421,7 @@
        "1835        False        True   2.133032e+13  37162571   True     True  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1531,7 +1444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1555,18 +1468,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fb5d550aea314d03bacc671f2c8136c2",
+       "model_id": "7da4f1af1a7c4a0a92d5b45f4b6976e5",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/1187 [00:00<?, ?it/s]"
+       "  0%|          | 0/3180 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -1575,12 +1488,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "715befe6ffc54ad09f4bb2f25735f094",
+       "model_id": "898eda6117d34e3ba35adec4e01e6225",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/1189 [00:00<?, ?it/s]"
+       "  0%|          | 0/3184 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -1589,12 +1502,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a3bdb92827d64a61ad0ece9359e803a4",
+       "model_id": "410ca097ee424c3c9239f5f8ff510cb1",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/1051 [00:00<?, ?it/s]"
+       "  0%|          | 0/2819 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -1603,12 +1516,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a073d8173e16402f8e59dd0108319bf3",
+       "model_id": "ddbcd2531cd74fdd9b42c20b14dd7c92",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/1021 [00:00<?, ?it/s]"
+       "  0%|          | 0/2943 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -1617,12 +1530,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d38cd181e5464eada811efdf03dafe37",
+       "model_id": "6b79ee2d7b7d45999c0abd494480c0b3",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/1189 [00:00<?, ?it/s]"
+       "  0%|          | 0/3184 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -1631,12 +1544,40 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a6edf994c1144052bc7cce85cecdeaf1",
+       "model_id": "62c31c4a5e7c4e4097fe29be0ae3887c",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/1189 [00:00<?, ?it/s]"
+       "  0%|          | 0/3185 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "fc4fb7eda91745f9bc07e48c259302ff",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/2910 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9e9e06f4c8514bb893efa27295f6d5df",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/3185 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -1658,47 +1599,11 @@
     "\n",
     "# Import Core\n",
     "import_to_patient_sub_folder(\n",
-    "    CXR_meta_df, Core_transfers_df, \"Core\", \"transfers\", \"transfer_id\")\n",
+    "    CXR_meta_df, Core_transfers_df, \"Core\", \"transfers\")\n",
     "import_to_patient_sub_folder(\n",
     "    CXR_meta_df, Core_admissions_df, \"Core\", \"admissions\")\n",
     "import_to_patient_sub_folder(CXR_meta_df, Core_patients_df, \"Core\", \"patients\")\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ea8d1c7da63f42edab7ba35229b45a02",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/2910 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f528d99f39b942f98a42c271089ce232",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/3185 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": []
   },
   {
    "cell_type": "code",
