--- a/[Patient-Level] (2) EyeGaze_MIMIC_import copy.ipynb
+++ b/[Patient-Level] (2) EyeGaze_MIMIC_import copy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,197 +18,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>dicom_id</th>\n",
-       "      <th>subject_id</th>\n",
-       "      <th>study_id</th>\n",
-       "      <th>PerformedProcedureStepDescription</th>\n",
-       "      <th>ViewPosition</th>\n",
-       "      <th>Rows</th>\n",
-       "      <th>Columns</th>\n",
-       "      <th>StudyDate</th>\n",
-       "      <th>StudyTime</th>\n",
-       "      <th>ProcedureCodeSequence_CodeMeaning</th>\n",
-       "      <th>ViewCodeSequence_CodeMeaning</th>\n",
-       "      <th>PatientOrientationCodeSequence_CodeMeaning</th>\n",
-       "      <th>in_eye_gaze</th>\n",
-       "      <th>in_reflacx</th>\n",
-       "      <th>StudyDateTime</th>\n",
-       "      <th>stay_id</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>181</th>\n",
-       "      <td>4873aa08-977bfd31-fb492e64-6ef432d1-3f12cbe3</td>\n",
-       "      <td>10002430</td>\n",
-       "      <td>53254222</td>\n",
-       "      <td>CHEST (PA AND LAT)</td>\n",
-       "      <td>PA</td>\n",
-       "      <td>3056</td>\n",
-       "      <td>2544</td>\n",
-       "      <td>21250928</td>\n",
-       "      <td>160736.171</td>\n",
-       "      <td>CHEST (PA AND LAT)</td>\n",
-       "      <td>postero-anterior</td>\n",
-       "      <td>Erect</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>2.125093e+13</td>\n",
-       "      <td>31293660</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>266</th>\n",
-       "      <td>dcdc4bd9-4301b111-2a65a814-ee8e7bc5-7f0b9a5a</td>\n",
-       "      <td>10003400</td>\n",
-       "      <td>56466802</td>\n",
-       "      <td>CHEST (PORTABLE AP)</td>\n",
-       "      <td>AP</td>\n",
-       "      <td>3056</td>\n",
-       "      <td>2544</td>\n",
-       "      <td>21361209</td>\n",
-       "      <td>133738.015</td>\n",
-       "      <td>CHEST (PORTABLE AP)</td>\n",
-       "      <td>antero-posterior</td>\n",
-       "      <td>Erect</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>2.136121e+13</td>\n",
-       "      <td>33678912</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>497</th>\n",
-       "      <td>5bdabba9-388f6646-ac06b5f5-f68b2fd2-3630de21</td>\n",
-       "      <td>10011607</td>\n",
-       "      <td>55814288</td>\n",
-       "      <td>CHEST (PA AND LAT)</td>\n",
-       "      <td>AP</td>\n",
-       "      <td>3056</td>\n",
-       "      <td>2544</td>\n",
-       "      <td>21820111</td>\n",
-       "      <td>230933.250</td>\n",
-       "      <td>CHEST (PA AND LAT)</td>\n",
-       "      <td>antero-posterior</td>\n",
-       "      <td>Erect</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>2.182011e+13</td>\n",
-       "      <td>37054412</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>539</th>\n",
-       "      <td>4a629500-9c3281ca-90bab490-9b6ac9c1-e5e6a580</td>\n",
-       "      <td>10012261</td>\n",
-       "      <td>53728467</td>\n",
-       "      <td>CHEST (PORTABLE AP)</td>\n",
-       "      <td>AP</td>\n",
-       "      <td>2544</td>\n",
-       "      <td>3056</td>\n",
-       "      <td>21750906</td>\n",
-       "      <td>191151.453</td>\n",
-       "      <td>CHEST (PORTABLE AP)</td>\n",
-       "      <td>antero-posterior</td>\n",
-       "      <td>Erect</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>2.175091e+13</td>\n",
-       "      <td>38668412</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>567</th>\n",
-       "      <td>8106217e-c41ab813-c6002d3f-ed4ee98b-7b165bae</td>\n",
-       "      <td>10012498</td>\n",
-       "      <td>55812956</td>\n",
-       "      <td>CHEST (PA AND LAT)</td>\n",
-       "      <td>PA</td>\n",
-       "      <td>3056</td>\n",
-       "      <td>2544</td>\n",
-       "      <td>21470331</td>\n",
-       "      <td>211642.296</td>\n",
-       "      <td>CHEST (PA AND LAT)</td>\n",
-       "      <td>postero-anterior</td>\n",
-       "      <td>Erect</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>2.147033e+13</td>\n",
-       "      <td>37362927</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                         dicom_id  subject_id  study_id  \\\n",
-       "181  4873aa08-977bfd31-fb492e64-6ef432d1-3f12cbe3    10002430  53254222   \n",
-       "266  dcdc4bd9-4301b111-2a65a814-ee8e7bc5-7f0b9a5a    10003400  56466802   \n",
-       "497  5bdabba9-388f6646-ac06b5f5-f68b2fd2-3630de21    10011607  55814288   \n",
-       "539  4a629500-9c3281ca-90bab490-9b6ac9c1-e5e6a580    10012261  53728467   \n",
-       "567  8106217e-c41ab813-c6002d3f-ed4ee98b-7b165bae    10012498  55812956   \n",
-       "\n",
-       "    PerformedProcedureStepDescription ViewPosition  Rows  Columns  StudyDate  \\\n",
-       "181                CHEST (PA AND LAT)           PA  3056     2544   21250928   \n",
-       "266               CHEST (PORTABLE AP)           AP  3056     2544   21361209   \n",
-       "497                CHEST (PA AND LAT)           AP  3056     2544   21820111   \n",
-       "539               CHEST (PORTABLE AP)           AP  2544     3056   21750906   \n",
-       "567                CHEST (PA AND LAT)           PA  3056     2544   21470331   \n",
-       "\n",
-       "      StudyTime ProcedureCodeSequence_CodeMeaning  \\\n",
-       "181  160736.171                CHEST (PA AND LAT)   \n",
-       "266  133738.015               CHEST (PORTABLE AP)   \n",
-       "497  230933.250                CHEST (PA AND LAT)   \n",
-       "539  191151.453               CHEST (PORTABLE AP)   \n",
-       "567  211642.296                CHEST (PA AND LAT)   \n",
-       "\n",
-       "    ViewCodeSequence_CodeMeaning PatientOrientationCodeSequence_CodeMeaning  \\\n",
-       "181             postero-anterior                                      Erect   \n",
-       "266             antero-posterior                                      Erect   \n",
-       "497             antero-posterior                                      Erect   \n",
-       "539             antero-posterior                                      Erect   \n",
-       "567             postero-anterior                                      Erect   \n",
-       "\n",
-       "     in_eye_gaze  in_reflacx  StudyDateTime   stay_id  \n",
-       "181         True       False   2.125093e+13  31293660  \n",
-       "266        False        True   2.136121e+13  33678912  \n",
-       "497        False        True   2.182011e+13  37054412  \n",
-       "539        False        True   2.175091e+13  38668412  \n",
-       "567         True       False   2.147033e+13  37362927  "
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "cxr_meta_df = pd.read_csv(os.path.join(XAMI_SPREADSHEET_FOLDER_PATH ,\"cxr_meta.csv\"), index_col=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -235,12 +54,12 @@
     "with_clinical_count = len(eye_gaze_master_df[eye_gaze_master_df['dicom_id'].isin(\n",
     "    list(set(cxr_meta_df[cxr_meta_df['stay_id'].notnull()]['dicom_id'])))])\n",
     "\n",
-    "print(f\"We have {len(with_clinical_count)} in the EyeGaze dataset can be used with clinical data.\")\n"
+    "print(f\"We have {with_clinical_count} in the EyeGaze dataset can be used with clinical data.\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +113,7 @@
        "      <td>files/p15/p15628804/s58573295/24c7496c-d7635df...</td>\n",
        "      <td>58573295</td>\n",
        "      <td>15628804</td>\n",
-       "      <td>33811834</td>\n",
+       "      <td>33237058.0</td>\n",
        "      <td>F</td>\n",
        "      <td>20 - 30</td>\n",
        "      <td>86</td>\n",
@@ -318,7 +137,7 @@
        "      <td>files/p19/p19462352/s51900589/78711a04-264d530...</td>\n",
        "      <td>51900589</td>\n",
        "      <td>19462352</td>\n",
-       "      <td>32954494</td>\n",
+       "      <td>31569309.0</td>\n",
        "      <td>F</td>\n",
        "      <td>20 - 30</td>\n",
        "      <td>0</td>\n",
@@ -342,7 +161,7 @@
        "      <td>files/p11/p11255143/s50941783/a770d8d6-7b6a62f...</td>\n",
        "      <td>50941783</td>\n",
        "      <td>11255143</td>\n",
-       "      <td>34005408</td>\n",
+       "      <td>35444327.0</td>\n",
        "      <td>F</td>\n",
        "      <td>20 - 30</td>\n",
        "      <td>0</td>\n",
@@ -366,7 +185,7 @@
        "      <td>files/p10/p10526322/s55981398/8e457921-bc1af8a...</td>\n",
        "      <td>55981398</td>\n",
        "      <td>10526322</td>\n",
-       "      <td>36680301</td>\n",
+       "      <td>33361557.0</td>\n",
        "      <td>F</td>\n",
        "      <td>20 - 30</td>\n",
        "      <td>0</td>\n",
@@ -390,7 +209,7 @@
        "      <td>files/p12/p12055181/s59722264/62fe5d5a-1806ee3...</td>\n",
        "      <td>59722264</td>\n",
        "      <td>12055181</td>\n",
-       "      <td>30138691</td>\n",
+       "      <td>37532814.0</td>\n",
        "      <td>M</td>\n",
        "      <td>20 - 30</td>\n",
        "      <td>0</td>\n",
@@ -428,12 +247,12 @@
        "3  files/p10/p10526322/s55981398/8e457921-bc1af8a...  55981398    10526322   \n",
        "4  files/p12/p12055181/s59722264/62fe5d5a-1806ee3...  59722264    12055181   \n",
        "\n",
-       "    stay_id gender anchor_age  image_top_pad  image_bottom_pad  \\\n",
-       "0  33811834      F    20 - 30             86                86   \n",
-       "1  32954494      F    20 - 30              0                 0   \n",
-       "2  34005408      F    20 - 30              0                 0   \n",
-       "3  36680301      F    20 - 30              0                 0   \n",
-       "4  30138691      M    20 - 30              0                 0   \n",
+       "      stay_id gender anchor_age  image_top_pad  image_bottom_pad  \\\n",
+       "0  33237058.0      F    20 - 30             86                86   \n",
+       "1  31569309.0      F    20 - 30              0                 0   \n",
+       "2  35444327.0      F    20 - 30              0                 0   \n",
+       "3  33361557.0      F    20 - 30              0                 0   \n",
+       "4  37532814.0      M    20 - 30              0                 0   \n",
        "\n",
        "   image_left_pad  ...  fracture__chx lung_lesion__chx lung_opacity__chx  \\\n",
        "0             448  ...            NaN              NaN               NaN   \n",
@@ -466,7 +285,7 @@
        "[5 rows x 59 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -477,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -495,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -504,18 +323,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "44cef2cc34734efdb0158e9d6c2c5429",
+       "model_id": "241aadb196294d5085690c9b678fde88",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/605 [00:00<?, ?it/s]"
+       "  0%|          | 0/1038 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -580,7 +399,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.10"
   },
   "orig_nbformat": 4
  },
