--- a/[Patient-Level] (3) REFLACX_MIMIC_import copy.ipynb
+++ b/[Patient-Level] (3) REFLACX_MIMIC_import copy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -62,6 +62,25 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
+       "      <th>177</th>\n",
+       "      <td>fa771fa1-d9571d07-bff8f655-327734a7-6e10b29d</td>\n",
+       "      <td>10002428</td>\n",
+       "      <td>59258773</td>\n",
+       "      <td>CHEST (PORTABLE AP)</td>\n",
+       "      <td>AP</td>\n",
+       "      <td>3056</td>\n",
+       "      <td>2544</td>\n",
+       "      <td>21560419</td>\n",
+       "      <td>92717.109</td>\n",
+       "      <td>CHEST (PORTABLE AP)</td>\n",
+       "      <td>antero-posterior</td>\n",
+       "      <td>Erect</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>2.156042e+12</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>181</th>\n",
        "      <td>4873aa08-977bfd31-fb492e64-6ef432d1-3f12cbe3</td>\n",
        "      <td>10002430</td>\n",
@@ -78,7 +97,7 @@
        "      <td>True</td>\n",
        "      <td>False</td>\n",
        "      <td>2.125093e+13</td>\n",
-       "      <td>31293660</td>\n",
+       "      <td>31293660.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>266</th>\n",
@@ -97,7 +116,7 @@
        "      <td>False</td>\n",
        "      <td>True</td>\n",
        "      <td>2.136121e+13</td>\n",
-       "      <td>33678912</td>\n",
+       "      <td>33678912.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>497</th>\n",
@@ -116,7 +135,7 @@
        "      <td>False</td>\n",
        "      <td>True</td>\n",
        "      <td>2.182011e+13</td>\n",
-       "      <td>37054412</td>\n",
+       "      <td>37054412.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>539</th>\n",
@@ -135,26 +154,7 @@
        "      <td>False</td>\n",
        "      <td>True</td>\n",
        "      <td>2.175091e+13</td>\n",
-       "      <td>38668412</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>567</th>\n",
-       "      <td>8106217e-c41ab813-c6002d3f-ed4ee98b-7b165bae</td>\n",
-       "      <td>10012498</td>\n",
-       "      <td>55812956</td>\n",
-       "      <td>CHEST (PA AND LAT)</td>\n",
-       "      <td>PA</td>\n",
-       "      <td>3056</td>\n",
-       "      <td>2544</td>\n",
-       "      <td>21470331</td>\n",
-       "      <td>211642.296</td>\n",
-       "      <td>CHEST (PA AND LAT)</td>\n",
-       "      <td>postero-anterior</td>\n",
-       "      <td>Erect</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>2.147033e+13</td>\n",
-       "      <td>37362927</td>\n",
+       "      <td>38668412.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -162,42 +162,42 @@
       ],
       "text/plain": [
        "                                         dicom_id  subject_id  study_id  \\\n",
+       "177  fa771fa1-d9571d07-bff8f655-327734a7-6e10b29d    10002428  59258773   \n",
        "181  4873aa08-977bfd31-fb492e64-6ef432d1-3f12cbe3    10002430  53254222   \n",
        "266  dcdc4bd9-4301b111-2a65a814-ee8e7bc5-7f0b9a5a    10003400  56466802   \n",
        "497  5bdabba9-388f6646-ac06b5f5-f68b2fd2-3630de21    10011607  55814288   \n",
        "539  4a629500-9c3281ca-90bab490-9b6ac9c1-e5e6a580    10012261  53728467   \n",
-       "567  8106217e-c41ab813-c6002d3f-ed4ee98b-7b165bae    10012498  55812956   \n",
        "\n",
        "    PerformedProcedureStepDescription ViewPosition  Rows  Columns  StudyDate  \\\n",
+       "177               CHEST (PORTABLE AP)           AP  3056     2544   21560419   \n",
        "181                CHEST (PA AND LAT)           PA  3056     2544   21250928   \n",
        "266               CHEST (PORTABLE AP)           AP  3056     2544   21361209   \n",
        "497                CHEST (PA AND LAT)           AP  3056     2544   21820111   \n",
        "539               CHEST (PORTABLE AP)           AP  2544     3056   21750906   \n",
-       "567                CHEST (PA AND LAT)           PA  3056     2544   21470331   \n",
        "\n",
        "      StudyTime ProcedureCodeSequence_CodeMeaning  \\\n",
+       "177   92717.109               CHEST (PORTABLE AP)   \n",
        "181  160736.171                CHEST (PA AND LAT)   \n",
        "266  133738.015               CHEST (PORTABLE AP)   \n",
        "497  230933.250                CHEST (PA AND LAT)   \n",
        "539  191151.453               CHEST (PORTABLE AP)   \n",
-       "567  211642.296                CHEST (PA AND LAT)   \n",
        "\n",
        "    ViewCodeSequence_CodeMeaning PatientOrientationCodeSequence_CodeMeaning  \\\n",
+       "177             antero-posterior                                      Erect   \n",
        "181             postero-anterior                                      Erect   \n",
        "266             antero-posterior                                      Erect   \n",
        "497             antero-posterior                                      Erect   \n",
        "539             antero-posterior                                      Erect   \n",
-       "567             postero-anterior                                      Erect   \n",
        "\n",
-       "     in_eye_gaze  in_reflacx  StudyDateTime   stay_id  \n",
-       "181         True       False   2.125093e+13  31293660  \n",
-       "266        False        True   2.136121e+13  33678912  \n",
-       "497        False        True   2.182011e+13  37054412  \n",
-       "539        False        True   2.175091e+13  38668412  \n",
-       "567         True       False   2.147033e+13  37362927  "
+       "     in_eye_gaze  in_reflacx  StudyDateTime     stay_id  \n",
+       "177        False        True   2.156042e+12         NaN  \n",
+       "181         True       False   2.125093e+13  31293660.0  \n",
+       "266        False        True   2.136121e+13  33678912.0  \n",
+       "497        False        True   2.182011e+13  37054412.0  \n",
+       "539        False        True   2.175091e+13  38668412.0  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,25 +223,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "We have 674 in the REFLACX dataset can be used with clinical data.\n"
+      "We have 3052 in the REFLACX dataset can be used with clinical data.\n"
      ]
     }
    ],
    "source": [
     "with_clinical_count = len(reflacx_meta_df[reflacx_meta_df['dicom_id'].isin(set(cxr_meta_df['dicom_id']))])\n",
-    "print(f\"We have {len(with_clinical_count)} in the REFLACX dataset can be used with clinical data.\")"
+    "print(f\"We have {with_clinical_count} in the REFLACX dataset can be used with clinical data.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,18 +250,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6e77ad7e022641d3a1af1f2618d3dec4",
+       "model_id": "19a9bf9ff1814d06aa0402373027e634",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/540 [00:00<?, ?it/s]"
+       "  0%|          | 0/2199 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
