--- a/[Patient-Level] (1) Clinical_data_import_mini copy.ipynb
+++ b/[Patient-Level] (1) Clinical_data_import_mini copy.ipynb
@@ -891,7 +891,94 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>subject_id</th>\n",
+       "      <th>hadm_id</th>\n",
+       "      <th>stay_id</th>\n",
+       "      <th>intime</th>\n",
+       "      <th>outtime</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10000115</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>38081480</td>\n",
+       "      <td>2154-12-10 02:04:00</td>\n",
+       "      <td>2154-12-10 02:16:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>10000115</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>30295111</td>\n",
+       "      <td>2154-12-17 16:37:00</td>\n",
+       "      <td>2154-12-17 17:38:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>10000473</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>33267868</td>\n",
+       "      <td>2138-03-15 20:07:00</td>\n",
+       "      <td>2138-03-15 20:26:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>10000764</td>\n",
+       "      <td>27897940.0</td>\n",
+       "      <td>35420907</td>\n",
+       "      <td>2132-10-14 19:31:00</td>\n",
+       "      <td>2132-10-14 23:32:59</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>10001038</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>34301067</td>\n",
+       "      <td>2149-08-07 08:51:00</td>\n",
+       "      <td>2149-08-07 08:55:00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   subject_id     hadm_id   stay_id               intime              outtime\n",
+       "0    10000115         NaN  38081480  2154-12-10 02:04:00  2154-12-10 02:16:00\n",
+       "1    10000115         NaN  30295111  2154-12-17 16:37:00  2154-12-17 17:38:00\n",
+       "2    10000473         NaN  33267868  2138-03-15 20:07:00  2138-03-15 20:26:00\n",
+       "3    10000764  27897940.0  35420907  2132-10-14 19:31:00  2132-10-14 23:32:59\n",
+       "4    10001038         NaN  34301067  2149-08-07 08:51:00  2149-08-07 08:55:00"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# load the edstays for indentifying the stay_id since the CXR-image dataset is a subset of ED.\n",
     "ED_edstays_df = pd.read_csv(os.path.join(ED_FOLDER_PATH, \"edstays.csv\"))\n",
@@ -918,13 +1005,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e3ceac97236447ed8a6e6829a4393039",
+       "model_id": "8b0bacbe697a4858a16f839d62f4825b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -987,7 +1074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1012,7 +1099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1022,7 +1109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1213,7 +1300,7 @@
        "2797         True       False   2.190020e+13  35307197   True     True  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1230,7 +1317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1421,7 +1508,7 @@
        "1835        False        True   2.133032e+13  37162571   True     True  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1444,7 +1531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1468,13 +1555,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7da4f1af1a7c4a0a92d5b45f4b6976e5",
+       "model_id": "b2094505d06c43cebc7825edd20e3e62",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1488,7 +1575,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "898eda6117d34e3ba35adec4e01e6225",
+       "model_id": "e95ad38e33264f49820b4b34ee0cd4f6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1502,7 +1589,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "410ca097ee424c3c9239f5f8ff510cb1",
+       "model_id": "847586a940f44bc389f4d30fdfbd1e5e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1516,7 +1603,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ddbcd2531cd74fdd9b42c20b14dd7c92",
+       "model_id": "24fdb8d6ee8d4a08912d08f378492f31",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1530,7 +1617,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6b79ee2d7b7d45999c0abd494480c0b3",
+       "model_id": "4f6df4d4e8214878a62064c26618b75a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1544,7 +1631,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "62c31c4a5e7c4e4097fe29be0ae3887c",
+       "model_id": "e22dde73f60246279b150764d14318f7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1558,7 +1645,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fc4fb7eda91745f9bc07e48c259302ff",
+       "model_id": "83f834a898af49d09d0e4466301bd0d3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1572,7 +1659,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9e9e06f4c8514bb893efa27295f6d5df",
+       "model_id": "30eba4f969a64472a3bc4041270c6086",
        "version_major": 2,
        "version_minor": 0
       },
