--- a/[Patient-Level] (4) Import _CXR_images copy.ipynb
+++ b/[Patient-Level] (4) Import _CXR_images copy.ipynb
@@ -344,7 +344,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3dc9c31afb9249eb8d0bd9ba2141df6e",
+       "model_id": "586bef04c98346bea8dabf898dff6685",
        "version_major": 2,
        "version_minor": 0
       },
@@ -389,14 +389,14 @@
     "        # CXR-jpg\n",
     "        source_path = os.path.join(\n",
     "            CXR_FOLDER_PATH, \"files\", f\"p{str(subject_id)[:2]}\", f\"p{subject_id}\", f\"s{study_id}\")\n",
-    "        copytree(source_path, cxr_jpg_save_folder_path,\n",
+    "        copytree(source_path, os.path.join(cxr_jpg_save_folder_path, f\"s{study_id}\"),\n",
     "                copy_function=copy, dirs_exist_ok=True)\n",
     "\n",
     "        # import the dicom\n",
     "        source_path = os.path.join(\n",
     "            CXR_DICOM_FOLDER_PATH, \"files\",  f\"p{str(subject_id)[:2]}\", f\"p{subject_id}\", f\"s{study_id}\")\n",
     "\n",
-    "        copytree(source_path, cxr_dicom_save_folder_path,\n",
+    "        copytree(source_path, os.path.join(cxr_dicom_save_folder_path, f\"s{study_id}\"),\n",
     "                copy_function=copy, dirs_exist_ok=True)\n",
     "\n",
     "        # import report text\n",
