--- a/[Patient-Level] (4) Import _CXR_images copy.ipynb
+++ b/[Patient-Level] (4) Import _CXR_images copy.ipynb
@@ -344,7 +344,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "586bef04c98346bea8dabf898dff6685",
+       "model_id": "e4db833139454dac96e6d0c6ea9df3b8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -374,7 +374,7 @@
     "    os.makedirs(cxr_dicom_save_folder_path, exist_ok=True)\n",
     "\n",
     "    match_cxr_meta.to_csv(os.path.join(\n",
-    "        cxr_jpg_save_folder_path, \"cxr_chexpert.csv\"))\n",
+    "        cxr_jpg_save_folder_path, \"cxr_meta.csv\"))\n",
     "    match_cxr_chexpert.to_csv(os.path.join(\n",
     "        cxr_jpg_save_folder_path, \"cxr_chexpert.csv\"))\n",
     "    match_cxr_negbio.to_csv(os.path.join(\n",
@@ -424,6 +424,26 @@
     "    #     save_folder_path)\n",
     "    # copytree(source_path, destination_path,\n",
     "    #             copy_function=copy, dirs_exist_ok=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## CXR-JPG spreadsheets, this one contain all the information in CXR dicom spreadsheets.\n",
+    "spreadsheet_folder_path = os.path.join(\n",
+    "    XAMI_SPREADSHEET_FOLDER_PATH, \"CXR-JPG\")\n",
+    "\n",
+    "os.makedirs(spreadsheet_folder_path, exist_ok=True)\n",
+    "\n",
+    "cxr_chexpert_df.to_csv(os.path.join(\n",
+    "    spreadsheet_folder_path, \"cxr_chexpert.csv\"))\n",
+    "cxr_negbio_df.to_csv(os.path.join(\n",
+    "    spreadsheet_folder_path, \"cxr_negbio.csv\"))\n",
+    "cxr_split_df.to_csv(os.path.join(\n",
+    "    spreadsheet_folder_path, \"cxr_split.csv\"))"
    ]
   },
   {
