--- a/draft/XAMI-MIMIC_creation.ipynb
+++ b/draft/XAMI-MIMIC_creation.ipynb
@@ -48,8 +48,7 @@
    ],
    "source": [
     "## Since the CXR is the main data we want to have.\n",
-    "CXR_meta_df = pd.read_csv(\"E:/AI-VR dataset/MIMIC-CXR-JPG/physionet.org/files/mimic-cxr-jpg/2.0.0/mimic-cxr-2.0.0-metadata.csv.gz\", compression='gzip', header=0, sep=',', quotechar='\"', error_bad_lines=False)\n",
-    "\n"
+    "CXR_meta_df = pd.read_csv(\"E:/AI-VR dataset/MIMIC-CXR-JPG/physionet.org/files/mimic-cxr-jpg/2.0.0/mimic-cxr-2.0.0-metadata.csv.gz\", compression='gzip', header=0, sep=',', quotechar='\"', error_bad_lines=False)"
    ]
   },
   {
