--- a/[Patient-Level] (1) Clinical_data_import_mini copy.ipynb
+++ b/[Patient-Level] (1) Clinical_data_import_mini copy.ipynb
@@ -1701,11 +1701,9 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "e1f7a6fd5218cac758778122742a16632ac1c3bf87901802736bfd00a721042a"
-  },
   "kernelspec": {
-   "display_name": "Python 3.8.10 64-bit ('tf_mac': conda)",
+   "display_name": "Python 3.9.7 ('pygaze')",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
@@ -1718,9 +1716,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.7"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "82864942334f93613dfea19f40259b2142cb12b26c1510468752ebf43f0344f6"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
