--- a/[Patient-Level] (4) Import _CXR_images copy.ipynb
+++ b/[Patient-Level] (4) Import _CXR_images copy.ipynb
@@ -22,6 +22,16 @@
    "outputs": [],
    "source": [
     "cxr_meta_df = pd.read_csv(os.path.join(\n",
+    "    XAMI_SPREADSHEET_FOLDER_PATH, \"cxr_meta.csv\"), index_col=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cxr_meta_df = pd.read_csv(os.path.join(\n",
     "    XAMI_SPREADSHEET_FOLDER_PATH, \"cxr_meta.csv\"), index_col=0)\n",
     "\n",
     "cxr_chexpert_df = pd.read_csv(os.path.join(\n",
@@ -455,11 +465,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "d9d14ce5063c5d8aaa62f42a22b56c5ab7a43293d440cad85867ad61e60e7912"
-  },
   "kernelspec": {
-   "display_name": "Python 3.9.7 64-bit ('tf': conda)",
+   "display_name": "Python 3.9.7 ('pytorch')",
    "language": "python",
    "name": "python3"
   },
@@ -473,9 +480,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.7"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "52a48fdedee40b77eb251917c5aa239bf02f1ab8c93cc13fe7347f570eadc6b9"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
