--- a/[Study-Level] (4) Import _CXR_images.ipynb
+++ b/[Study-Level] (4) Import _CXR_images.ipynb
@@ -116,11 +116,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "d9d14ce5063c5d8aaa62f42a22b56c5ab7a43293d440cad85867ad61e60e7912"
-  },
   "kernelspec": {
-   "display_name": "Python 3.9.7 64-bit ('tf': conda)",
+   "display_name": "Python 3.9.7 ('pytorch')",
    "language": "python",
    "name": "python3"
   },
@@ -134,9 +131,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.7"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "52a48fdedee40b77eb251917c5aa239bf02f1ab8c93cc13fe7347f570eadc6b9"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
