--- a/[Patient-Level] (2) EyeGaze_MIMIC_import copy.ipynb
+++ b/[Patient-Level] (2) EyeGaze_MIMIC_import copy.ipynb
@@ -65,6 +65,68 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# fix the dicom_id bug in eye_gaze_gaze_df:\n",
+    "all_bugged_dicom_ids = set(eye_gaze_gaze_df[eye_gaze_gaze_df['DICOM_ID'].apply(lambda x: len(x) != 44)]['DICOM_ID']) # dicom_id should have the len = 44.\n",
+    "\n",
+    "for id in all_bugged_dicom_ids:\n",
+    "    if len(id) > 44:\n",
+    "        pass\n",
+    "        #### Don't touch it, then it would be included in our dataset.\n",
+    "        # corrected_id = id[:44]\n",
+    "        # replace the id with the corrected.\n",
+    "        # eye_gaze_gaze_df['DICOM_ID'].replace(id, corrected_id, inplace=True,)\n",
+    "\n",
+    "    else:\n",
+    "        # find the correct id in cxr_df\n",
+    "        # check if this id appear twice or once in the gaze_df\n",
+    "        match_dicom_ids = set(eye_gaze_gaze_df[eye_gaze_gaze_df['DICOM_ID'].apply(lambda x: x.startswith(id))]['DICOM_ID'])\n",
+    "        if len(match_dicom_ids) == 1:\n",
+    "                corrected_id = match_dicom_ids[0]   \n",
+    "                eye_gaze_gaze_df['DICOM_ID'].replace(id, corrected_id, inplace=True,) # replace the value.\n",
+    "        elif len(match_dicom_ids) > 1:\n",
+    "                count_map = { m_id: len(eye_gaze_gaze_df[eye_gaze_gaze_df['DICOM_ID']==m_id]) for m_id in match_dicom_ids}\n",
+    "\n",
+    "                # get the id with most cases\n",
+    "                corrected_id = max(count_map, key=count_map.get)\n",
+    "                \n",
+    "                # remove others\n",
+    "                id_to_remove = [m_id for m_id in match_dicom_ids if m_id != corrected_id]\n",
+    "                eye_gaze_gaze_df = eye_gaze_gaze_df[~(eye_gaze_gaze_df['DICOM_ID'].isin(id_to_remove))]\n",
+    "\n",
+    "                # replace the id with corrected\n",
+    "                eye_gaze_gaze_df['DICOM_ID'].replace(id, corrected_id, inplace=True,)\n",
+    "        else:\n",
+    "            raise StopIteration(\"Can't find the mathced id, it shouldn't be the bugged list.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'320df379-5ac0ef5d-a88bd5b6-e0620b99-7ca7bbfe_calibration'}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# double check if the bugged it exist.\n",
+    "all_bugged_dicom_ids = set(eye_gaze_gaze_df[eye_gaze_gaze_df['DICOM_ID'].apply(lambda x: len(x) != 44)]['DICOM_ID']) # dicom_id should have the len = 44.\n",
+    "all_bugged_dicom_ids"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -289,7 +351,7 @@
        "[5 rows x 59 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,13 +394,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8f1dcaf8e32d4c9699ae7b84de6b460f",
+       "model_id": "6e682276312b408e91d75752870abf88",
        "version_major": 2,
        "version_minor": 0
       },
@@ -408,7 +470,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.8 (main, Nov 24 2022, 08:08:27) [Clang 14.0.6 ]"
   },
   "orig_nbformat": 4,
   "vscode": {
