--- a/[Patient-Level] (4) Import _CXR_images copy.ipynb
+++ b/[Patient-Level] (4) Import _CXR_images copy.ipynb
@@ -4,20 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "module 'os' has no attribute 'paht'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [1], line 5\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mtqdm\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mnotebook\u001b[39;00m  \u001b[39mimport\u001b[39;00m tqdm\n\u001b[1;32m      4\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mshutil\u001b[39;00m \u001b[39mimport\u001b[39;00m copytree, copy\n\u001b[0;32m----> 5\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mdata_path\u001b[39;00m \u001b[39mimport\u001b[39;00m CXR_REPORT_FOLDER_PATH, XAMI_SPREADSHEET_FOLDER_PATH, XAMI_MIMIC_PATH, CXR_DICOM_FOLDER_PATH, CXR_JPG_FOLDER_PATH\n\u001b[1;32m      7\u001b[0m pd\u001b[39m.\u001b[39moptions\u001b[39m.\u001b[39mmode\u001b[39m.\u001b[39mchained_assignment  \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m\n",
-      "File \u001b[0;32m~/Documents/GitHub/MIMIC-Eye/data_path.py:21\u001b[0m\n\u001b[1;32m     19\u001b[0m EYEGAZE_FOLDER_PATH \u001b[39m=\u001b[39m os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mjoin(PHYSIONET_PATH, \u001b[39m\"\u001b[39m\u001b[39megd-cxr/1.0.0/\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m     20\u001b[0m REFLACX_FOLDER_PATH \u001b[39m=\u001b[39m os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mjoin(PHYSIONET_PATH, \u001b[39m\"\u001b[39m\u001b[39mreflacx-xray-localization/1.0.0/\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m---> 21\u001b[0m CXR_REPORT_FOLDER_PATH \u001b[39m=\u001b[39m os\u001b[39m.\u001b[39;49mpaht\u001b[39m.\u001b[39mjoin(PHYSIONET_PATH, \u001b[39m\"\u001b[39m\u001b[39mmimic-cxr-reports/\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m     23\u001b[0m \u001b[39m# Store place.\u001b[39;00m\n\u001b[1;32m     25\u001b[0m XAMI_MIMIC_PATH \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m./mimic-eye\u001b[39m\u001b[39m\"\u001b[39m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: module 'os' has no attribute 'paht'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import pandas as pd\n",
@@ -30,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +223,7 @@
        "539        False        True   2.175091e+13  38668412.0  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +327,7 @@
        "4  68b5c4b1-227d0485-9cc38c3f-7b84ab51-4b472714  53911762    10000032  train"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -351,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,13 +348,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e4db833139454dac96e6d0c6ea9df3b8",
+       "model_id": "8b78a2d8109e44f1ad865415ad8fa2f0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -451,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,6 +454,328 @@
     "    spreadsheet_folder_path, \"cxr_negbio.csv\"))\n",
     "cxr_split_df.to_csv(os.path.join(\n",
     "    spreadsheet_folder_path, \"cxr_split.csv\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>dicom_id</th>\n",
+       "      <th>subject_id</th>\n",
+       "      <th>study_id</th>\n",
+       "      <th>PerformedProcedureStepDescription</th>\n",
+       "      <th>ViewPosition</th>\n",
+       "      <th>Rows</th>\n",
+       "      <th>Columns</th>\n",
+       "      <th>StudyDate</th>\n",
+       "      <th>StudyTime</th>\n",
+       "      <th>ProcedureCodeSequence_CodeMeaning</th>\n",
+       "      <th>ViewCodeSequence_CodeMeaning</th>\n",
+       "      <th>PatientOrientationCodeSequence_CodeMeaning</th>\n",
+       "      <th>in_eye_gaze</th>\n",
+       "      <th>in_reflacx</th>\n",
+       "      <th>StudyDateTime</th>\n",
+       "      <th>stay_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>36880</th>\n",
+       "      <td>9c452d99-a2e14f15-8458865f-92178374-a9e29b76</td>\n",
+       "      <td>11004477</td>\n",
+       "      <td>54420337</td>\n",
+       "      <td>CHEST (PA AND LAT)</td>\n",
+       "      <td>PA</td>\n",
+       "      <td>3056</td>\n",
+       "      <td>2544</td>\n",
+       "      <td>21570321</td>\n",
+       "      <td>125119.328</td>\n",
+       "      <td>CHEST (PA AND LAT)</td>\n",
+       "      <td>postero-anterior</td>\n",
+       "      <td>Erect</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>2.157032e+13</td>\n",
+       "      <td>37046290.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>149309</th>\n",
+       "      <td>1793e4df-5b1fd824-cb5d0f43-bc3531f4-40cf6c54</td>\n",
+       "      <td>13977589</td>\n",
+       "      <td>52718721</td>\n",
+       "      <td>CHEST (PA AND LAT)</td>\n",
+       "      <td>PA</td>\n",
+       "      <td>2544</td>\n",
+       "      <td>3056</td>\n",
+       "      <td>21560714</td>\n",
+       "      <td>195753.015</td>\n",
+       "      <td>CHEST (PA AND LAT)</td>\n",
+       "      <td>postero-anterior</td>\n",
+       "      <td>Erect</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>2.156071e+13</td>\n",
+       "      <td>35250052.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>168387</th>\n",
+       "      <td>5c61db80-672e0874-ba236081-53d2f8ad-ab8d2efb</td>\n",
+       "      <td>14492434</td>\n",
+       "      <td>53621943</td>\n",
+       "      <td>CHEST (PA AND LAT)</td>\n",
+       "      <td>PA</td>\n",
+       "      <td>3056</td>\n",
+       "      <td>2544</td>\n",
+       "      <td>21621123</td>\n",
+       "      <td>163419.796</td>\n",
+       "      <td>CHEST (PA AND LAT)</td>\n",
+       "      <td>postero-anterior</td>\n",
+       "      <td>Erect</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>2.162112e+13</td>\n",
+       "      <td>35827518.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>217451</th>\n",
+       "      <td>cb1f25ef-87f09c2a-0f656ffe-f63022ab-8b305520</td>\n",
+       "      <td>15752803</td>\n",
+       "      <td>51358448</td>\n",
+       "      <td>CHEST (PA AND LAT)</td>\n",
+       "      <td>PA</td>\n",
+       "      <td>3056</td>\n",
+       "      <td>2544</td>\n",
+       "      <td>21670428</td>\n",
+       "      <td>44745.671</td>\n",
+       "      <td>CHEST (PA AND LAT)</td>\n",
+       "      <td>postero-anterior</td>\n",
+       "      <td>Erect</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>2.167043e+12</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>221046</th>\n",
+       "      <td>d8b6b619-9e181de2-c46adb2d-08194ead-eefd7108</td>\n",
+       "      <td>15857729</td>\n",
+       "      <td>56277244</td>\n",
+       "      <td>CHEST (PA AND LAT)</td>\n",
+       "      <td>PA</td>\n",
+       "      <td>3056</td>\n",
+       "      <td>2532</td>\n",
+       "      <td>21471130</td>\n",
+       "      <td>201829.890</td>\n",
+       "      <td>CHEST (PA AND LAT)</td>\n",
+       "      <td>postero-anterior</td>\n",
+       "      <td>Erect</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>2.147113e+13</td>\n",
+       "      <td>35608984.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>257300</th>\n",
+       "      <td>a28cb755-423caf3b-13530617-03aaff16-5ca9a2b3</td>\n",
+       "      <td>16831446</td>\n",
+       "      <td>57904568</td>\n",
+       "      <td>CHEST (PA AND LAT)</td>\n",
+       "      <td>PA</td>\n",
+       "      <td>3056</td>\n",
+       "      <td>2544</td>\n",
+       "      <td>21250708</td>\n",
+       "      <td>145552.718</td>\n",
+       "      <td>CHEST (PA AND LAT)</td>\n",
+       "      <td>postero-anterior</td>\n",
+       "      <td>Erect</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>2.125071e+13</td>\n",
+       "      <td>36647749.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>264640</th>\n",
+       "      <td>53ba5a31-2d6bda0a-abb7ad77-065a0f20-b4fa6b44</td>\n",
+       "      <td>17023312</td>\n",
+       "      <td>53848831</td>\n",
+       "      <td>CHEST (PA AND LAT)</td>\n",
+       "      <td>PA</td>\n",
+       "      <td>2544</td>\n",
+       "      <td>3056</td>\n",
+       "      <td>21410118</td>\n",
+       "      <td>223908.281</td>\n",
+       "      <td>CHEST (PA AND LAT)</td>\n",
+       "      <td>postero-anterior</td>\n",
+       "      <td>Erect</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>2.141012e+13</td>\n",
+       "      <td>38751904.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>305380</th>\n",
+       "      <td>8afc3991-7ec1912b-b24d9633-3c4b0f57-17c0e8f4</td>\n",
+       "      <td>18087960</td>\n",
+       "      <td>59570639</td>\n",
+       "      <td>CHEST (PA AND LAT)</td>\n",
+       "      <td>PA</td>\n",
+       "      <td>3056</td>\n",
+       "      <td>2544</td>\n",
+       "      <td>21700325</td>\n",
+       "      <td>141943.265</td>\n",
+       "      <td>CHEST (PA AND LAT)</td>\n",
+       "      <td>postero-anterior</td>\n",
+       "      <td>Erect</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>2.170033e+13</td>\n",
+       "      <td>39432013.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>345480</th>\n",
+       "      <td>f79f46d3-74a520f1-3039fa3d-eef50e3d-a5ad3e59</td>\n",
+       "      <td>19157903</td>\n",
+       "      <td>55024274</td>\n",
+       "      <td>CHEST (PA AND LAT)</td>\n",
+       "      <td>PA</td>\n",
+       "      <td>3056</td>\n",
+       "      <td>2544</td>\n",
+       "      <td>21201012</td>\n",
+       "      <td>51146.296</td>\n",
+       "      <td>CHEST (PA AND LAT)</td>\n",
+       "      <td>postero-anterior</td>\n",
+       "      <td>Erect</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>2.120101e+12</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>360460</th>\n",
+       "      <td>060cf092-fe76bdf7-19fee515-26cbef2c-5c16ba6f</td>\n",
+       "      <td>19565653</td>\n",
+       "      <td>58125581</td>\n",
+       "      <td>Performed Desc</td>\n",
+       "      <td>PA</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>1794</td>\n",
+       "      <td>21530220</td>\n",
+       "      <td>85448.000</td>\n",
+       "      <td>CHEST (PA AND LAT)</td>\n",
+       "      <td>postero-anterior</td>\n",
+       "      <td>Recumbent</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>2.153022e+12</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                            dicom_id  subject_id  study_id  \\\n",
+       "36880   9c452d99-a2e14f15-8458865f-92178374-a9e29b76    11004477  54420337   \n",
+       "149309  1793e4df-5b1fd824-cb5d0f43-bc3531f4-40cf6c54    13977589  52718721   \n",
+       "168387  5c61db80-672e0874-ba236081-53d2f8ad-ab8d2efb    14492434  53621943   \n",
+       "217451  cb1f25ef-87f09c2a-0f656ffe-f63022ab-8b305520    15752803  51358448   \n",
+       "221046  d8b6b619-9e181de2-c46adb2d-08194ead-eefd7108    15857729  56277244   \n",
+       "257300  a28cb755-423caf3b-13530617-03aaff16-5ca9a2b3    16831446  57904568   \n",
+       "264640  53ba5a31-2d6bda0a-abb7ad77-065a0f20-b4fa6b44    17023312  53848831   \n",
+       "305380  8afc3991-7ec1912b-b24d9633-3c4b0f57-17c0e8f4    18087960  59570639   \n",
+       "345480  f79f46d3-74a520f1-3039fa3d-eef50e3d-a5ad3e59    19157903  55024274   \n",
+       "360460  060cf092-fe76bdf7-19fee515-26cbef2c-5c16ba6f    19565653  58125581   \n",
+       "\n",
+       "       PerformedProcedureStepDescription ViewPosition  Rows  Columns  \\\n",
+       "36880                 CHEST (PA AND LAT)           PA  3056     2544   \n",
+       "149309                CHEST (PA AND LAT)           PA  2544     3056   \n",
+       "168387                CHEST (PA AND LAT)           PA  3056     2544   \n",
+       "217451                CHEST (PA AND LAT)           PA  3056     2544   \n",
+       "221046                CHEST (PA AND LAT)           PA  3056     2532   \n",
+       "257300                CHEST (PA AND LAT)           PA  3056     2544   \n",
+       "264640                CHEST (PA AND LAT)           PA  2544     3056   \n",
+       "305380                CHEST (PA AND LAT)           PA  3056     2544   \n",
+       "345480                CHEST (PA AND LAT)           PA  3056     2544   \n",
+       "360460                    Performed Desc           PA  2021     1794   \n",
+       "\n",
+       "        StudyDate   StudyTime ProcedureCodeSequence_CodeMeaning  \\\n",
+       "36880    21570321  125119.328                CHEST (PA AND LAT)   \n",
+       "149309   21560714  195753.015                CHEST (PA AND LAT)   \n",
+       "168387   21621123  163419.796                CHEST (PA AND LAT)   \n",
+       "217451   21670428   44745.671                CHEST (PA AND LAT)   \n",
+       "221046   21471130  201829.890                CHEST (PA AND LAT)   \n",
+       "257300   21250708  145552.718                CHEST (PA AND LAT)   \n",
+       "264640   21410118  223908.281                CHEST (PA AND LAT)   \n",
+       "305380   21700325  141943.265                CHEST (PA AND LAT)   \n",
+       "345480   21201012   51146.296                CHEST (PA AND LAT)   \n",
+       "360460   21530220   85448.000                CHEST (PA AND LAT)   \n",
+       "\n",
+       "       ViewCodeSequence_CodeMeaning  \\\n",
+       "36880              postero-anterior   \n",
+       "149309             postero-anterior   \n",
+       "168387             postero-anterior   \n",
+       "217451             postero-anterior   \n",
+       "221046             postero-anterior   \n",
+       "257300             postero-anterior   \n",
+       "264640             postero-anterior   \n",
+       "305380             postero-anterior   \n",
+       "345480             postero-anterior   \n",
+       "360460             postero-anterior   \n",
+       "\n",
+       "       PatientOrientationCodeSequence_CodeMeaning  in_eye_gaze  in_reflacx  \\\n",
+       "36880                                       Erect         True        True   \n",
+       "149309                                      Erect         True        True   \n",
+       "168387                                      Erect         True        True   \n",
+       "217451                                      Erect         True        True   \n",
+       "221046                                      Erect         True        True   \n",
+       "257300                                      Erect         True        True   \n",
+       "264640                                      Erect         True        True   \n",
+       "305380                                      Erect         True        True   \n",
+       "345480                                      Erect         True        True   \n",
+       "360460                                  Recumbent         True        True   \n",
+       "\n",
+       "        StudyDateTime     stay_id  \n",
+       "36880    2.157032e+13  37046290.0  \n",
+       "149309   2.156071e+13  35250052.0  \n",
+       "168387   2.162112e+13  35827518.0  \n",
+       "217451   2.167043e+12         NaN  \n",
+       "221046   2.147113e+13  35608984.0  \n",
+       "257300   2.125071e+13  36647749.0  \n",
+       "264640   2.141012e+13  38751904.0  \n",
+       "305380   2.170033e+13  39432013.0  \n",
+       "345480   2.120101e+12         NaN  \n",
+       "360460   2.153022e+12         NaN  "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cxr_meta_df[cxr_meta_df[\"in_reflacx\"] & cxr_meta_df[\"in_eye_gaze\"]]"
    ]
   },
   {
@@ -493,7 +802,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.8 (main, Nov 24 2022, 08:08:27) [Clang 14.0.6 ]"
   },
   "orig_nbformat": 4,
   "vscode": {
