--- a/[Study-Level] (3) REFLACX_MIMIC_import.ipynb
+++ b/[Study-Level] (3) REFLACX_MIMIC_import.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +197,7 @@
        "567         True       False   2.147033e+13  37362927  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,28 +209,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "reflacx_meta_df = pd.concat([pd.read_csv(os.path.join(\n",
     "    REFLACX_FOLDER_PATH, \"main_data\", f\"metadata_phase_{i}.csv\")) for i in range(1, 4)])\n",
     "os.makedirs(os.path.join(\n",
-    "    XAMI_SPREADSHEET_FOLDER_PATH, \"REFLACX\"))\n",
+    "    XAMI_SPREADSHEET_FOLDER_PATH, \"REFLACX\"), exist_ok=True)\n",
     "reflacx_meta_df.to_csv(os.path.join(\n",
     "    XAMI_SPREADSHEET_FOLDER_PATH, \"REFLACX\", \"metadata.csv\"))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reflacx_meta_df[\"Lung nodule or mass\"] = reflacx_meta_df[\n",
+    "    [\"Lung nodule or mass\", \"Mass\", \"Nodule\"]\n",
+    "].max(axis=1)\n",
+    "\n",
+    "del reflacx_meta_df[\"Mass\"]\n",
+    "del reflacx_meta_df[\"Nodule\"]\n",
+    "\n",
+    "reflacx_meta_df[\"High lung volume / emphysema\"] = reflacx_meta_df[\n",
+    "    [\"High lung volume / emphysema\", \"Emphysema\"]\n",
+    "].max(axis=1)\n",
+    "del reflacx_meta_df[\"Emphysema\"]\n",
+    "\n",
+    "reflacx_meta_df[\"Pleural abnormality\"] = reflacx_meta_df[\n",
+    "    [\"Pleural abnormality\", \"Pleural thickening\", \"Pleural effusion\"]\n",
+    "].max(axis=1)\n",
+    "del reflacx_meta_df[\"Pleural thickening\"]\n",
+    "del reflacx_meta_df[\"Pleural effusion\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "We have 674 in the REFLACX dataset can be used with clinical data.\n"
+      "We have 907 in the REFLACX dataset can be used with clinical data.\n"
      ]
     }
    ],
@@ -242,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -309,10 +334,10 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -333,10 +358,10 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -357,10 +382,10 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -381,10 +406,10 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -405,14 +430,14 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 34 columns</p>\n",
+       "<p>5 rows × 29 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -451,24 +476,24 @@
        "3               2.0                           NaN             NaN   \n",
        "4               0.0                           NaN             NaN   \n",
        "\n",
-       "   Enlarged hilum  Hiatal hernia  High lung volume / emphysema  \\\n",
-       "0             NaN            NaN                           NaN   \n",
-       "1             NaN            NaN                           NaN   \n",
-       "2             NaN            NaN                           NaN   \n",
-       "3             NaN            NaN                           NaN   \n",
-       "4             NaN            NaN                           NaN   \n",
+       "   Enlarged hilum Hiatal hernia  High lung volume / emphysema  \\\n",
+       "0             NaN           NaN                           0.0   \n",
+       "1             NaN           NaN                           0.0   \n",
+       "2             NaN           NaN                           0.0   \n",
+       "3             NaN           NaN                           0.0   \n",
+       "4             NaN           NaN                           0.0   \n",
        "\n",
        "   Interstitial lung disease Lung nodule or mass  Pleural abnormality  \n",
-       "0                        NaN                 NaN                  NaN  \n",
-       "1                        NaN                 NaN                  NaN  \n",
-       "2                        NaN                 NaN                  NaN  \n",
-       "3                        NaN                 NaN                  NaN  \n",
-       "4                        NaN                 NaN                  NaN  \n",
+       "0                        NaN                 0.0                  0.0  \n",
+       "1                        NaN                 0.0                  0.0  \n",
+       "2                        NaN                 0.0                  0.0  \n",
+       "3                        NaN                 1.0                  0.0  \n",
+       "4                        NaN                 0.0                  0.0  \n",
        "\n",
-       "[5 rows x 34 columns]"
+       "[5 rows x 29 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -479,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,18 +513,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e353de306cca43f79d733fc168c8856c",
+       "model_id": "43169f2a67e4450ea68751e0ca85572f",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/540 [00:00<?, ?it/s]"
+       "  0%|          | 0/739 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -534,11 +559,18 @@
     "            destination_path = os.path.join(save_folder_path, study_id)\n",
     "            copytree(source_path, destination_path, dirs_exist_ok=True, copy_function=copy)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.7 ('pygaze')",
+   "display_name": "pytorch",
    "language": "python",
    "name": "python3"
   },
@@ -552,12 +584,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "82864942334f93613dfea19f40259b2142cb12b26c1510468752ebf43f0344f6"
+    "hash": "05ebdd47fe7a4051acc4227c2d648dd2aae7424f451cfb0e2d4bf70d17920b33"
    }
   }
  },
