--- a/[Patient-Level] (1) Clinical_data_import_mini copy.ipynb
+++ b/[Patient-Level] (1) Clinical_data_import_mini copy.ipynb
@@ -46,7 +46,7 @@
     {
      "data": {
       "text/plain": [
-       "'/Users/jrhs/Desktop/physionet.org/files/mimic-cxr-jpg/2.0.0'"
+       "'E:/physionet.org/files/mimic-cxr-jpg/2.0.0'"
       ]
      },
      "execution_count": 2,
@@ -66,7 +66,7 @@
     {
      "data": {
       "text/plain": [
-       "'/Users/jrhs/Desktop/physionet.org/files/mimic-cxr-jpg/2.0.0/mimic-cxr-2.0.0-metadata.csv.gz'"
+       "'E:/physionet.org/files/mimic-cxr-jpg/2.0.0\\\\mimic-cxr-2.0.0-metadata.csv.gz'"
       ]
      },
      "execution_count": 3,
@@ -935,7 +935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1051,7 +1051,7 @@
        "4      F  WHITE         AMBULANCE    ADMITTED  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1067,7 +1067,24 @@
     "# necessary\n",
     "hosp_patients_df = pd.read_csv(os.path.join(\n",
     "    HOSP_FOLDER_PATH,  \"patients.csv.gz\"))\n",
+    "ed_triage_df = pd.read_csv(os.path.join(ED_FOLDER_PATH, \"triage.csv.gz\"))\n",
+    "\n",
     "ed_edstays_df = pd.read_csv(os.path.join(ED_FOLDER_PATH, \"edstays.csv.gz\"))\n",
+    "\n",
+    "# clinical data will also be passed into spreadsheet folder.\n",
+    "\n",
+    "hosp_folder_path = os.path.join(\n",
+    "    XAMI_SPREADSHEET_FOLDER_PATH, \"Hosp\")\n",
+    "os.makedirs(hosp_folder_path, exist_ok=True)\n",
+    "hosp_patients_df.to_csv(os.path.join(\n",
+    "    hosp_folder_path, \"patients.csv\"))\n",
+    "\n",
+    "\n",
+    "ed_folder_path = os.path.join(\n",
+    "    XAMI_SPREADSHEET_FOLDER_PATH, \"ED\")\n",
+    "os.makedirs(ed_folder_path, exist_ok=True)\n",
+    "ed_triage_df.to_csv(os.path.join(\n",
+    "    ed_folder_path, \"triage.csv\"))\n",
     "\n",
     "# ed\n",
     "\n",
@@ -2005,6 +2022,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
    "outputs": [],
@@ -2385,12 +2409,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8 (main, Nov 24 2022, 08:08:27) [Clang 14.0.6 ]"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "05ebdd47fe7a4051acc4227c2d648dd2aae7424f451cfb0e2d4bf70d17920b33"
+    "hash": "52a48fdedee40b77eb251917c5aa239bf02f1ab8c93cc13fe7347f570eadc6b9"
    }
   }
  },
